update: 更新security测试的视图界面

--- a/justauth/src/main/resources/templates/index.html
+++ b/justauth/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <title>JustAuth第三方登录软件</title>
@@ -35,7 +35,7 @@
 </body>
 </html>
 
-<script src="vue3.2.45"></script>
+<script src="vue3.2.45.js"></script>
 <script src="axios1.2.1.js"></script>
 <script src="element-ui/vue.global.js"></script>
 <script src="element-ui/elementPlus2.2.27.js"></script>
